fix: address all best-practices review findings (#1-#26)
Changes based on best-practices review report (2026-02-18):

#1  CliOutput: Unified DI via @Factory + @Named PrintStream beans
#2  ReviewOrchestrator: Enhanced Javadoc explaining non-DI lifecycle
#3  ExitCodes: Added sysexits.h reference comments
#4  MaskedToStringMap: Added get/size/containsKey delegation
#5  ConfigDefaults: Added /// Javadoc to utility methods
#6  CopilotService: Removed redundant initialized flag
#7  ReviewExecutionModeRunner: Track AgentConfig with subtasks
#8  CliParsing: Removed unused Objects import
#9  AgentConfigLoader: Changed to LinkedHashMap for stable ordering
#10 TemplateService: Added cache design intent comment
#11 SkillRegistry: Added explicit @Inject constructor
#12 ExecutionConfig: Moved defaultIfNegative to ConfigDefaults
#13 OrchestratorConfig: Grouped prompt fields into PromptTexts record
#14 GithubMcpConfig: Removed redundant Collections.unmodifiableMap wrap
#15 ContentCollector: Added volatile to cache fields
#16 ReviewApp.main: No change needed (already follows best practices)
#17 SummaryConfig: Added /// Javadoc
#18 CommandExecutor: Removed unused 5-arg overload and DEFAULT_CLI_OUTPUT
#19 FeatureFlags: No change needed (project convention)
#20 CliValidationException: Added Javadoc documenting scope
#21 JDK version: Synced .sdkmanrc/docs to JDK 26 + SDK 1.0.9
#22 ReviewResult: Added @Nullable to agentConfig and repository
#23 FrontmatterParser: Use SnakeYAML with manual fallback
#24 Virtual threads: Added name prefixes for observability
#25 CustomInstruction.isEmpty: Removed redundant null check
#26 ScheduledExecutor: Use platform thread for scheduler